--- a/index.html
+++ b/index.html
@@ -1,13 +1,244 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./css/style.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-4xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
+<!DOCTYPE html>
+<html class="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body class="">
+    <!-- Navbar -->
+    <nav class="bg-gray-300 py-4">
+      <div class="container">
+        <div class="grid gap-12 grid-cols-[auto_1fr_auto] items-center">
+          <!-- Logo -->
+          <div>
+            <img src="./images/logo.svg" alt="LOGO" />
+          </div>
+          <!-- menu -->
+          <ul class="flex gap-5 items-center">
+            <li>
+              <a href="#" class="flex items-center gap-1"
+                >Home
+                <span>
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M10.862 6.19534L7.99998 9.05734L5.13798 6.19534L4.19531 7.13801L7.99998 10.9427L11.8046 7.13801L10.862 6.19534Z"
+                      fill="#33354D"
+                    />
+                  </svg>
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="#">Portfolio</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Blog</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+          <!-- buttons -->
+          <div class="flex justify-end gap-5 items-center">
+            <div class="flex items-center gap-1">
+              <label for="theme">Light</label>
+              <label
+                for="theme"
+                class="flex items-center cursor-pointer select-none text-dark dark:text-white"
+              >
+                <div class="relative">
+                  <input type="checkbox" id="theme" class="peer sr-only" />
+                  <div class="block h-8 rounded-full bg-primary w-14"></div>
+                  <div
+                    class="absolute w-6 h-6 transition bg-white rounded-full left-1 top-1 peer-checked:translate-x-full peer-checked:bg-black"
+                  ></div>
+                </div>
+              </label>
+              <label for="theme">Dark</label>
+            </div>
+            <button class="common_btn">Contact us</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+
+    <!--  -->
+    <section class="bg-gray-1">
+      <div class="container">
+        <div class="pt-10 pb-8">
+          <div class="flex items-center gap-3">
+          <div class="flex items-center gap-3">
+            <span>
+              <img src="./images/icons/home.png" alt="" />
+            </span>
+            <span class="leading-[1.6] text-gray-6 text-sm"> Homepage </span>
+          </div>
+    
+          <span>
+            <img src="./images/icons/arrow-right.png" alt="" />
+          </span>
+    
+          <div class="flex items-center gap-3">
+            <span class="leading-[1.6] text-primary text-sm"> Services Page </span>
+          </div>
+        </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <h2 class="text-[40px] font-extrabold leading-[1.3] text-gray-9">Services Page</h2>
+        <div></div>
+      </div>
+    </section>
+
+    <section class="bg-gray-1">
+      <div class="container">
+        <div class="grid grid-cols-2 gap-x-10 gap-y-20 pt-20">
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+            <div class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
+              <img src="./images/icons/launch.png" alt="">
+            </div>
+            <div>
+              <h4 class="inline items-center justify-start gap-2">Custom Software Development <span class="size-6 rounded-full inline-flex items-center justify-center border-[3px] border-primary translate-y-[-3px]">
+                <img src="./images/icons/arrow-right-bold.png" alt="">
+              </span>
+            </h4>
+              <p class="pt-4">Nisi, dis sed cursus eget pellentesque mattis. Odio eu proin aliquam a. Semper bibendum tellus non tellus, facilisi dignissim in quam massa. Aliquam, feugiat ut cum tellus, sit. Quis consectetur gravida ac ac lectus cursus egestas.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="grid items-end grid-cols-[430px_1fr] gap-20">
+          <div class="">
+            <h2>What Our Clients Say</h2>
+            <div class="h-[360px] w-[416px]">
+              <img src="./images/man.png" alt="">
+            </div>
+          </div>
+
+          <div class="pt-[64px] px-12 pb-12 bg-white shadow-1">
+            <p class="pb-10">Dolor, a eget elementum, integer nulla volutpat, nunc, sit. Quam iaculis varius mauris magna sem. Egestas sed sed suscipit dolor faucibus dui imperdiet at eget. Tincidunt imperdiet quis hendrerit aliquam feugiat neque cras sed. Dictum quam integer volutpat tellus, faucibus platea. Pulvinar turpis proin faucibus at mauris.</p>
+            <div class="flex gap-6">
+              <div>
+                <h6 class="text-[20px] font-extrabold leading-[1.4]">Ralph Edwards</h6>
+                <p>Head of Marketing</p>
+              </div>
+              <div class="bg-gray-3 w-[1px]"></div>
+              <div>
+                <img src="./images/brand-1.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!--  -->
+  </body>
 </html>
