--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- font awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -64,7 +66,7 @@
   </nav>
 
 
-  <!--  -->
+  <!-- Services Section  -->
   <section class="bg-gray-1">
     <div class="container">
       <div class="pt-10 pb-8">
@@ -93,11 +95,13 @@
     </div>
   </section>
 
-  <section class="bg-gray-1 mb-[338px] relative">
+  <section class="bg-gray-1  relative">
     <div class="container">
       <div class="grid grid-cols-2 gap-x-10 gap-y-20 pt-20">
+
+
         <!-- card -->
-        <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+        <div class="relative pt-[64px] rounded-[8px] px-10 pb-10 bg-white shadow-1">
           <div
             class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
             <img src="./images/icons/cms.svg" alt="icon">
@@ -116,7 +120,7 @@
 
 
         <!-- card -->
-        <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+        <div class="relative pt-[64px] rounded-[8px] px-10 pb-10 bg-white shadow-1">
           <div
             class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
             <img src="./images/icons/launch.png" alt="icon">
@@ -135,7 +139,7 @@
 
 
         <!-- card -->
-        <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+        <div class="relative pt-[64px] px-10 rounded-[8px] pb-10 bg-white shadow-1">
           <div
             class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
             <img src="./images/icons/mobile-app.svg" alt="icon">
@@ -154,7 +158,7 @@
 
 
         <!-- card -->
-        <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+        <div class="relative pt-[64px] px-10 rounded-[8px] pb-10 bg-white shadow-1">
           <div
             class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
             <img src="./images/icons/analytics (1).svg" alt="icon">
@@ -173,7 +177,7 @@
 
 
         <!-- card -->
-        <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+        <div class="relative pt-[64px] rounded-[8px] px-10 pb-10 bg-white shadow-1">
           <div
             class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
             <img src="./images/icons/web-development.svg" alt="icon">
@@ -192,7 +196,7 @@
 
 
         <!-- card -->
-        <div class="relative pt-[64px] px-10 pb-10 bg-white shadow-1">
+        <div class="relative pt-[64px] rounded-[8px] px-10 pb-10 bg-white shadow-1">
           <div
             class="absolute left-[40px] top-0 -translate-y-1/2 size-20 rounded-[8px] bg-primary flex items-center justify-center">
             <img src="./images/icons/timer.svg" alt="icon">
@@ -212,6 +216,8 @@
       </div>
     </div>
 
+    <!-- Clients Comments Section -->
+
     <div class="container ">
       <div class="grid items-end grid-cols-[430px_1fr] gap-20  translate-y-[50%] ">
         <div class="">
@@ -222,10 +228,12 @@
         </div>
 
         <div class="pt-[64px] px-12 pb-12 bg-white relative rounded-[8px] shadow-1">
-          <div class="h-[52px] w-[52px] bg-primary flex items-center justify-center rounded-[8px] absolute top-0 left-[48px] -translate-y-[50%] shadow-2">
+          <div
+            class="h-[52px] w-[52px] bg-primary flex items-center justify-center rounded-[8px] absolute top-0 left-[48px] -translate-y-[50%] shadow-2">
             <img src="./images/icons/quotes.svg" alt="">
           </div>
-          <p class="pb-10 text-[18px] text-gray-7">Dolor, a eget elementum, integer nulla volutpat, nunc, sit. Quam iaculis varius mauris magna
+          <p class="pb-10 text-[18px] text-gray-7">Dolor, a eget elementum, integer nulla volutpat, nunc, sit. Quam
+            iaculis varius mauris magna
             sem. Egestas sed sed suscipit dolor faucibus dui imperdiet at eget. Tincidunt imperdiet quis hendrerit
             aliquam feugiat neque cras sed. Dictum quam integer volutpat tellus, faucibus platea. Pulvinar turpis proin
             faucibus at mauris.</p>
@@ -245,7 +253,166 @@
   </section>
 
 
-  <!--  -->
+  <!-- Why choose us section -->
+  <section>
+    <div class="container text-center">
+      <h2 class="mt-[374px]  text-[40px]">Why Choose Us</h2>
+      <p class=" text-[18px] text-gray-6">We personalize how we work to fit your project needs. Our approach helps
+        augment innovation.</p>
+      <div class="flex justify-center mt-10">
+
+
+        <div class="flex flex-col justify-center items-center gap-6 px-6 border-r-[1px] border-[#E2E5F1]">
+          <div>
+            <img src="./images/24-hours 1.svg" alt="image">
+          </div>
+          <h5>Build a functional prototype in 24 hrs</h5>
+        </div>
+
+
+        <div class="flex flex-col justify-center items-center gap-6 px-6 border-r-[1px] border-[#E2E5F1]">
+          <div>
+            <img src="./images/presentation.svg" alt="image">
+          </div>
+          <h5>Create an MVP within two weeks</h5>
+        </div>
+
+
+        <div class="flex flex-col justify-center items-center gap-6 px-6 border-r-[1px] border-[#E2E5F1]">
+          <div>
+            <img src="./images/analytics 1.svg" alt="image">
+          </div>
+          <h5>Kickstart software development</h5>
+        </div>
+
+
+        <div class="flex flex-col justify-center items-center gap-6">
+          <div>
+            <img src="./images/chat.svg" alt="image">
+          </div>
+          <h5>Get 24/7 tech & business support</h5>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+
+  <!-- Contact section -->
+  <section class=" py-16 mt-[112px] px-4 ">
+    <div class="container ">
+      <div class=" mx-auto grid grid-cols-2 items-center gap-[134px] bg-gray-1 rounded-[8px]  py-[72px] px-[110px]">
+
+      <!-- Left: Contact Info -->
+      <div class="flex flex-col justify-between">
+        <div>
+          <h1 class="font-extrabold mb-6">Get in Touch</h1>
+          <p class="text-gray-7 mb-18 leading-[1.6] max-w-[416px]">
+            Have a project in mind? To request a quote contact us directly or fill out the form and let us know how we
+            can help.
+          </p>
+
+          <div class="py-4">
+            <h3>Contact Info</h3>
+
+
+            <div class="flex items-center mt-6 gap-3 text-gray-8">
+             <div class="icon">
+              <img src="./images/icons/bx-phone-call.svg" alt="icon">
+             </div>
+              <span>(406) 555-0120</span>
+            </div>
+
+
+
+            <div class="flex items-center gap-3 mt-2 text-gray-8">
+              <div class="icon">
+                <img src="./images/icons/bx-envelope.svg" alt="icon">
+              </div>
+              <span>example@gmail.com</span>
+            </div>
+
+
+            <div class="flex items-center gap-3 mt-2 text-gray-8">
+            <div class="icon">
+              <img src="./images/icons/bx-map.svg" alt="icon">
+            </div>
+              <span>2464 Royal Ln. Mesa, New Jersey 45463</span>
+            </div>
+          </div>
+        </div>
+
+       
+        <!-- Social Icons -->
+        <div class="flex gap-3 mt-8">
+          <a href="#" class="border-[1px] border-gray-3 hover:bg-[#1CA1F2] hover:text-white transition hover:shadow-3 p-3 rounded-[6px] text-[20px]">
+            <i class="fa-brands fa-square-facebook"></i>
+          </a>
+
+          <a href="#" class="border-[1px] border-gray-3 hover:bg-[#1CA1F2] bg-[#1CA1F2] shadow-3 hover:text-white text-white transition p-3 rounded-[6px] text-[20px] ">
+            <i class="fab fa-twitter"></i>
+          </a>
+          
+          <a href="#" class="border-[1px] border-gray-3 hover:bg-[#1CA1F2] hover:shadow-3 hover:text-white transition p-3 rounded-[6px] text-[20px]">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+
+          <a href="#" class="border-[1px] border-gray-3 hover:bg-[#1CA1F2] hover:shadow-3  hover:text-white transition p-3 rounded-[6px] text-[20px]">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+      </div>
+
+      <!-- Right: Form -->
+      <form class="bg-white rounded-lg p-8  shadow-1">
+        <div class="mb-6">
+          <label class="block text-sm font-medium text-gray-700">Service</label>
+          <select
+            class="mt-1 w-full border border-gray-300 text-gray-5 cursor-pointer rounded-[8px] p-2 focus:ring-indigo-500 focus:border-indigo-500">
+            <option disabled selected>Choose the service you are interested in</option>
+            <option>Web Development</option>
+            <option>UI/UX Design</option>
+            <option>SEO Optimization</option>
+          </select>
+        </div>
+
+        <div class="mb-6">
+          <label class="block text-sm font-medium text-gray-700">Full name</label>
+          <input type="text"
+            class="mt-1 w-full border border-gray-300 rounded-[8px] p-2 focus:ring-primary focus:border-primary" />
+        </div>
+
+        <div class="mb-6">
+          <label class="block text-sm font-medium text-gray-700">Email address</label>
+          <input type="email"
+            class="mt-1 w-full border border-gray-300 rounded-[8px] p-2 focus:ring-primary focus:border-primary" />
+        </div>
+
+        <div class="mb-8">
+          <label class="block text-sm font-medium text-gray-700">Message</label>
+          <textarea rows="4" 
+            class="mt-1 w-full border resize-none border-gray-300 rounded-[8px] p-2 focus:ring-primary focus:border-primary"
+            placeholder="Tell us about your project"></textarea>
+        </div>
+
+        <div class="flex items-center gap-2 mb-8">
+          <input type="checkbox" id="terms" class="h-4 w-4 text-primary border-gray-300 rounded" />
+          <label for="terms" class="text-sm text-gray-600">I agree to the <a href="#"
+              class="text-primary underline">Terms & Conditions</a>.</label>
+        </div>
+
+        <button type="submit"
+          class="w-full bg-primary cursor-pointer  hover:bg-indigo-600 text-white font-semibold py-2 px-4 rounded-[8px] shadow-md transition">
+          Send request
+        </button>
+      </form>
+
+    </div>
+    </div>
+  </section>
+
+
 </body>
 
 </html>
